--- a/configs/config.json
+++ b/configs/config.json
@@ -3,5 +3,11 @@
   "riot_key": "<RIOT API KEY>",
   "discord_public_key": "<DISCORD PUBLIC KEY>",
   "application_id": "<DISCORD APPLICATION ID>",
-  "token": "<DISCORD BOT TOKEN>"
+  "token": "<DISCORD BOT TOKEN>",
+
+  "aws_account_id": "<AWS ACCOUNT ID>",
+
+  "pat": "<GITHUB TOKEN>",
+  "owner": "<GITHUB REPO OWNER>",
+  "repo": "<GITHUB REPO>"
 }
