--- a/.github/workflows/testflow.yml
+++ b/.github/workflows/testflow.yml
@@ -13,9 +13,8 @@ jobs:
 
       - name: Set up secret file
         env:
-          DEBUG_APPLICATION_ID: ${{ secrets.APPLICATION_ID }}
+          AWS_REGION: ${{secrets.AWS_REGION}}
+          DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
         run: |
-          echo $DEBUG_APPLICATION_ID >> secrets.txt
-
-      - name: Run tmate
-        uses: mxschmitt/action-tmate@v2
+          echo AWS_REGION = $AWS_REGION
+          echo DISCORD_PUBLIC_KEY = $DISCORD_PUBLIC_KEY
