--- a/packages/frontend/package.json
+++ b/packages/frontend/package.json
@@ -16,7 +16,8 @@
     "next": "14.0.3",
     "react": "^18",
     "react-bootstrap": "^2.9.1",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "twisted": "^1.55.0"
   },
   "devDependencies": {
     "@types/node": "^20",
