--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,6 +13,19 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
+  unit-tests: # TODO: eventually this will be used for python unittest, currently setup to run frontend unit tests
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/frontend
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
+      - name: Run unit tests
+        run: |
+          npm i
+          npm run test
+
   create-config:
     environment: dev
     runs-on: ubuntu-latest
@@ -32,9 +45,10 @@ jobs:
           name: config
           path: config.json
 
-  # dependabot: # TODO: This does not really do much without a testing suite
+  # deploy-dependabot:
   #   if: github.actor == 'dependabot[bot]'
   #   needs:
+  #     - unit-tests
   #     - create-config
   #   runs-on: ubuntu-latest
   #   steps:
@@ -60,6 +74,7 @@ jobs:
   deploy:
     if: github.actor != 'dependabot[bot]'
     needs:
+      - unit-tests
       - create-config
     runs-on: ubuntu-latest
     steps:
