--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -13,6 +13,19 @@ permissions:
   contents: read # This is required for actions/checkout
 
 jobs:
+  unit-tests:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./packages/frontend
+    steps:
+      - name: Git clone the repository
+        uses: actions/checkout@v4
+      - name: Run unit tests
+        run: |
+          npm i
+          npm run test
+
   create-config:
     environment: prod
     runs-on: ubuntu-latest
@@ -34,6 +47,7 @@ jobs:
 
   deploy:
     needs:
+      - unit-tests
       - create-config
     runs-on: ubuntu-latest
     steps:
