--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -32,8 +32,11 @@ jobs:
           pip install -r src/task/requirements.txt
           pip install -r src/layers/dynamo/requirements.txt
           pip install -r src/layers/league/requirements.txt
+          pip install coverage
       - name: Run unit tests
-        run: python3 -m unittest -v
+        run: |
+          coverage run -m unittest -v
+          coverage report
 
   create-config:
     environment: dev
