--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -1,18 +1,30 @@
-name: prod
+name: Prod
 on:
   push:
     branches:
       - main
 
-# Concurrency group name ensures concurrent workflow runs wait for any in-progress job to finish
 concurrency:
   group: ${{ github.repository }}
 
 permissions:
-  id-token: write # This is required for requesting the JWT
-  contents: read # This is required for actions/checkout
+  id-token: write
+  contents: write
 
 jobs:
+  rebase-dependencies:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+          ref: dependencies
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git rebase origin/main
+          git push origin dependencies --force
+
   unit-tests:
     runs-on: ubuntu-latest
     defaults:
