--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -9,27 +9,34 @@ updates:
     directory: "/"
     schedule:
       interval: "weekly"
+    target-branch: "dependencies"
   - package-ecosystem: "npm"
     directory: "/"
     schedule:
       interval: "weekly"
+    target-branch: "dependencies"
   - package-ecosystem: "pip"
     directory: "/packages/functions/src/layers/dynamo"
     schedule:
       interval: "weekly"
+    target-branch: "dependencies"
   - package-ecosystem: "pip"
     directory: "/packages/functions/src/layers/league"
     schedule:
       interval: "weekly"
+    target-branch: "dependencies"
   - package-ecosystem: "pip"
     directory: "/packages/functions/src/main"
     schedule:
       interval: "weekly"
+    target-branch: "dependencies"
   - package-ecosystem: "pip"
     directory: "/packages/functions/src/register"
     schedule:
       interval: "weekly"
+    target-branch: "dependencies"
   - package-ecosystem: "pip"
     directory: "/packages/functions/src/task"
     schedule:
       interval: "weekly"
+    target-branch: "dependencies"
