--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -12,18 +12,7 @@ permissions:
   contents: read
 
 jobs:
-  rebase-dependencies:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: 0
-          ref: dependencies
-      - run: |
-          git config user.name github-actions
-          git config user.email github-actions@github.com
-          git rebase origin/master
-          git push origin dependencies --force
+  # TODO: create a job to update the 'dependencies' branch with updates from main
 
   unit-tests:
     runs-on: ubuntu-latest
