--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -22,8 +22,8 @@ jobs:
       - run: |
           git config user.name github-actions
           git config user.email github-actions@github.com
-          git rebase main
-          git push dependencies --force
+          git rebase origin/main
+          git push origin dependencies --force
 
   unit-tests:
     runs-on: ubuntu-latest
