--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -15,6 +15,16 @@ updates:
     schedule:
       interval: "weekly"
     target-branch: "dependencies"
+  - package-ecosystem: "npm"
+    directory: "/configs"
+    schedule:
+      interval: "weekly"
+    target-branch: "dependencies"
+  - package-ecosystem: "npm"
+    directory: "/packages/frontend"
+    schedule:
+      interval: "weekly"
+    target-branch: "dependencies"
   - package-ecosystem: "pip"
     directory: "/packages/functions/src/layers/dynamo"
     schedule:
