--- a/.github/workflows/dependencies.yml
+++ b/.github/workflows/dependencies.yml
@@ -4,6 +4,9 @@ on:
     branches:
       - "dependencies"
 
+concurrency:
+  group: dependabot
+
 permissions:
   contents: write
   pull-requests: write
