--- a/packages/frontend/.eslintrc.json
+++ b/packages/frontend/.eslintrc.json
@@ -1,7 +1,7 @@
 {
   "extends": [
     "next/core-web-vitals",
-    "plugin:testing-library-react",
-    "plugin: jest-dom/recommended"
+    "plugin:testing-library/react",
+    "plugin:jest-dom/recommended"
   ]
 }
