--- a/configs/package.json
+++ b/configs/package.json
@@ -2,6 +2,7 @@
   "name": "configs",
   "version": "0.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "start": "node create_secrets.js"
   },
