--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,24 +7,35 @@ on:
       - main
 
 jobs:
-  release:
+  tag:
     if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     permissions:
       contents: write
+    outputs:
+      new_tag: ${{ steps.tag.outputs.new_tag }}
     steps:
     - uses: actions/checkout@v4
       with:
         ref: ${{ github.event.pull_request.merge_commit_sha }}
         fetch-depth: 0
     - name: Bump version and push tag
+      id: tag
       uses: anothrNick/github-tag-action@1.67.0
       env:
         GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         DEFAULT_BUMP: patch
         WITH_V: true
-    - name: Generate release
-      uses: "marvinpinto/action-automatic-releases@latest"
-      with:
-        repo_token: "${{ secrets.GITHUB_TOKEN }}"
-        prerelease: false
+
+  release:
+    if: github.event.pull_request.merged == true
+    needs: tag
+    runs-on: ubuntu-latest
+    steps:
+      - name: Generate release
+        uses: "marvinpinto/action-automatic-releases@latest"
+        with:
+          repo_token: "${{ secrets.GITHUB_TOKEN }}"
+          prerelease: false
+          automatic_release_tag: latest
+          title: ${{ needs.tag.outputs.new_tag }}
