--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,34 +7,29 @@ on:
       - main
 
 jobs:
-  tag:
-    if: github.event.pull_request.merged == true
+  rebase-dependencies:
     runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    outputs:
-      new_tag: ${{ steps.tag.outputs.new_tag }}
     steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.merge_commit_sha }}
-        fetch-depth: 0
-    - name: Bump version and push tag
-      id: tag
-      uses: anothrNick/github-tag-action@1.67.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DEFAULT_BUMP: patch
-        WITH_V: true
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0
+          ref: dependencies
+      - run: |
+          git config user.name github-actions
+          git config user.email github-actions@github.com
+          git rebase origin/main
+          git push origin dependencies --force
 
   release:
-    needs: tag
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
       - name: Generate release
         uses: "marvinpinto/action-automatic-releases@latest"
         with:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           automatic_release_tag: latest
-          title: ${{ needs.tag.outputs.new_tag }}
+          files: LICENSE
