--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -7,29 +7,9 @@ on:
       - main
 
 jobs:
-  tag:
-    if: github.event.pull_request.merged == true
-    runs-on: ubuntu-latest
-    permissions:
-      contents: write
-    outputs:
-      new_tag: ${{ steps.tag.outputs.new_tag }}
-    steps:
-    - uses: actions/checkout@v4
-      with:
-        ref: ${{ github.event.pull_request.merge_commit_sha }}
-        fetch-depth: 0
-    - name: Bump version and push tag
-      id: tag
-      uses: anothrNick/github-tag-action@1.67.0
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-        DEFAULT_BUMP: patch
-        WITH_V: true
-
   release:
-    needs: tag
     runs-on: ubuntu-latest
+    if: github.event.pull_request.merged == true
     steps:
       - name: Generate release
         uses: "marvinpinto/action-automatic-releases@latest"
@@ -37,4 +17,4 @@ jobs:
           repo_token: "${{ secrets.GITHUB_TOKEN }}"
           prerelease: false
           automatic_release_tag: latest
-          title: ${{ needs.tag.outputs.new_tag }}
+          files: LICENSE
