--- a/packages/functions/src/register/discord_commands.yaml
+++ b/packages/functions/src/register/discord_commands.yaml
@@ -19,18 +19,26 @@
   description: acknowledge dangerous commands
 
 - name: adduser
-  description: add user to guild, user must be a valid League of Legends username
+  description: add user to guild, user must be a valid riot id
   options:
-    - name: username
-      description: League of Legends username
+    - name: game name
+      description: riot id game name
+      type: 3
+      required: true
+    - name: tagline
+      description: riot id tagline
       type: 3
       required: true
 
 - name: deluser
-  description: delete user from guild, user must be a valid League of Legends username and exist
+  description: delete user from guild, user must be a valid riot id and exist
   options:
-    - name: username
-      description: League of Legends username
+    - name: game name
+      description: riot id game name
+      type: 3
+      required: true
+    - name: tagline
+      description: riot id tagline
       type: 3
       required: true
 
