--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
   "scripts": {
     "dev": "sst dev",
     "build": "sst build",
-    "deploy": "sst deploy --stage dev",
-    "deploy:prod": "sst deploy --stage prod",
+    "deploy": "node deploy-dev.js",
+    "deploy:prod": "node deploy-prod.js",
     "remove": "sst remove",
     "console": "sst console",
     "typecheck": "tsc --noEmit"
