--- a/configs/package.json
+++ b/configs/package.json
@@ -8,6 +8,8 @@
   },
   "dependencies": {
     "@octokit/core": "^6.1.2",
-    "libsodium-wrappers": "^0.7.13"
+    "husky": "^9.0.11",
+    "libsodium-wrappers": "^0.7.13",
+    "lint-staged": "^15.2.2"
   }
 }
