remove verbose flag

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -34,7 +34,7 @@ jobs:
           pip install coverage
       - name: Run unit tests
         run: |
-          coverage run -m unittest -v
+          coverage run -m unittest
           coverage report
 
   create-config:
