--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -16,7 +16,7 @@ jobs:
     environment: dev
     runs-on: ubuntu-latest
     env:
-      AWS_REGION: ${{secrets.AWS_REGION}}
+      SET_AWS_REGION: ${{secrets.AWS_REGION}}
       RIOT_KEY: ${{secrets.RIOT_KEY}}
       DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
       APPLICATION_ID: ${{secrets.APPLICATION_ID}}
