--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -60,7 +60,7 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/GitHub
+          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ZoeBotActions
           role-duration-seconds: 900
           aws-region: ${{secrets.AWS_REGION}}
       - name: Deploy prod app
