--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -13,7 +13,14 @@ permissions:
 
 jobs:
   unit-tests:
+    environment: dev
     runs-on: ubuntu-latest
+    env:
+      SET_AWS_REGION: ${{secrets.AWS_REGION}}
+      RIOT_KEY: ${{secrets.RIOT_KEY}}
+      DISCORD_PUBLIC_KEY: ${{secrets.DISCORD_PUBLIC_KEY}}
+      APPLICATION_ID: ${{secrets.APPLICATION_ID}}
+      TOKEN: ${{secrets.TOKEN}}
     defaults:
       run:
         working-directory: ./packages/functions
@@ -32,10 +39,16 @@ jobs:
           pip install -r src/layers/dynamo/requirements.txt
           pip install -r src/layers/league/requirements.txt
           pip install coverage
+      - name: Configure AWS credentials
+        uses: aws-actions/configure-aws-credentials@v4
+        with:
+          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ZoeBotApplication
+          role-duration-seconds: 900
+          aws-region: ${{secrets.AWS_REGION}}
       - name: Run unit tests
         run: |
           coverage run -m unittest
-          coverage report
+          coverage report --show-missing
 
   create-config:
     environment: dev
@@ -72,8 +85,8 @@ jobs:
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
-          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/GitHub
-          role-duration-seconds: 3600 #adjust as needed for your build time
+          role-to-assume: arn:aws:iam::${{secrets.AWS_ACCOUNT_ID}}:role/ZoeBotActions
+          role-duration-seconds: 3600
           aws-region: ${{secrets.AWS_REGION}}
       - name: Deploy dev app
         run: |
