--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -53,7 +53,7 @@ jobs:
       - name: Run acceptance tests
         run: behave
 
-  dependabot:
+  automated-merge:
     needs: automated-tests
     runs-on: ubuntu-latest
     if: github.actor == 'dependabot[bot]'
