function acceptance testing (#386)
* setup acceptance test

* create gherkin for other features

* replace # with :

* remove dangling and

* add coverage to requirements

* create basic step functions

* add behave to pipeline with test failure

* fix test failure

* remove unit folder

* create tests for help and speak

* move test requirements.txt into functions root

* rename dynamo_util to guild_util

* guild util starter

* move argparse into layer import helper

* server feature

* league feature

* exception handling for guild_exists

* time.sleep

* debug exception

* log create guild res

* test only create

* debug logs

* manually set stage

* log state name

* create stage as var

* logging environments

* set env by STAGE

* manually set stage

* uncomment other tests

* auto-merge function dependencies if passing all tests

* add dependabot to dev workflow

* rename job

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -9,10 +9,11 @@ concurrency:
 
 permissions:
   id-token: write
-  contents: read
+  contents: write
+  pull-requests: write
 
 jobs:
-  unit-tests:
+  automated-tests:
     environment: dev
     runs-on: ubuntu-latest
     env:
@@ -38,7 +39,7 @@ jobs:
           pip install -r src/task/requirements.txt
           pip install -r src/layers/dynamo/requirements.txt
           pip install -r src/layers/league/requirements.txt
-          pip install coverage
+          pip install -r requirements.txt
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
@@ -49,10 +50,26 @@ jobs:
         run: |
           coverage run -m unittest
           coverage report --show-missing
+      - name: Run acceptance tests
+        run: behave
+
+  automated-merge:
+    needs: automated-tests
+    runs-on: ubuntu-latest
+    if: github.actor == 'dependabot[bot]'
+    env:
+      PR_URL: ${{github.event.pull_request.html_url}}
+      GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    steps:
+      - name: Approve PR
+        run: gh pr review --approve "$PR_URL"
+      - name: Merge PR
+        run: gh pr merge --auto --merge --delete-branch "$PR_URL"
 
   create-config:
     environment: dev
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     env:
       AWS_REGION: ${{secrets.AWS_REGION}}
       RIOT_KEY: ${{secrets.RIOT_KEY}}
@@ -71,9 +88,10 @@ jobs:
 
   deploy:
     needs:
-      - unit-tests
+      - automated-tests
       - create-config
     runs-on: ubuntu-latest
+    if: github.actor != 'dependabot[bot]'
     steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
