--- a/.github/workflows/prod.yml
+++ b/.github/workflows/prod.yml
@@ -4,9 +4,6 @@ on:
     branches:
       - main
 
-concurrency:
-  group: ${{ github.repository }}
-
 permissions:
   id-token: write
   contents: write
@@ -45,6 +42,8 @@ jobs:
           path: config.json
 
   deploy:
+    concurrency:
+      group: deploy
     needs:
       - unit-tests
       - create-config
