--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -50,19 +50,6 @@ jobs:
       - name: Run acceptance tests
         run: behave
 
-  automated-merge:
-    needs: automated-tests
-    runs-on: ubuntu-latest
-    if: github.actor == 'dependabot[bot]'
-    env:
-      PR_URL: ${{github.event.pull_request.html_url}}
-      GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
-    steps:
-      - name: Approve PR
-        run: gh pr review --approve "$PR_URL"
-      - name: Merge PR
-        run: gh pr merge --auto --merge --delete-branch "$PR_URL"
-
   create-config:
     environment: dev
     runs-on: ubuntu-latest
@@ -109,3 +96,26 @@ jobs:
         run: |
           npm i
           npm run deploy
+
+  approve:
+    needs: automated-tests
+    runs-on: ubuntu-latest
+    env:
+      PR_URL: ${{github.event.pull_request.html_url}}
+      GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    steps:
+      - name: Approve PR
+        run: gh pr review --approve "$PR_URL"
+      - name: Merge PR
+        run: gh pr merge --auto --merge --delete-branch "$PR_URL"
+
+  merge:
+    needs: approve
+    runs-on: ubuntu-latest
+    if: github.actor == 'dependabot[bot]'
+    env:
+      PR_URL: ${{github.event.pull_request.html_url}}
+      GH_TOKEN: ${{secrets.GITHUB_TOKEN}}
+    steps:
+      - name: Merge PR
+        run: gh pr merge --auto --merge --delete-branch "$PR_URL"
