create test concurrency group

--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -8,6 +8,8 @@ permissions:
 
 jobs:
   automated-tests:
+    concurrency:
+      group: test
     environment: dev
     runs-on: ubuntu-latest
     env:
