--- a/.github/workflows/dev.yml
+++ b/.github/workflows/dev.yml
@@ -60,7 +60,11 @@ jobs:
         run: echo # TODO: run frontend acceptance test
         working-directory: ./packages/frontend
 
-  create-config:
+  deploy:
+    concurrency:
+      group: deploy
+    needs:
+      - automated-tests
     environment: dev
     runs-on: ubuntu-latest
     if: github.actor != 'dependabot[bot]'
@@ -71,31 +75,11 @@ jobs:
       APPLICATION_ID: ${{secrets.APPLICATION_ID}}
       TOKEN: ${{secrets.TOKEN}}
     steps:
-      - name: Create config.json
-        run: |
-          echo "{ \"aws_region\": \"$AWS_REGION\", \"riot_key\": \"$RIOT_KEY\", \"discord_public_key\": \"$DISCORD_PUBLIC_KEY\", \"application_id\": \"$APPLICATION_ID\", \"token\": \"$TOKEN\" }" > config.json
-      - name: Upload config.json
-        uses: actions/upload-artifact@v4
-        with:
-          name: config
-          path: config.json
-
-  deploy:
-    concurrency:
-      group: deploy
-    needs:
-      - automated-tests
-      - create-config
-    runs-on: ubuntu-latest
-    if: github.actor != 'dependabot[bot]'
-    steps:
       - name: Git clone the repository
         uses: actions/checkout@v4
-      - name: Download config.json
-        uses: actions/download-artifact@v4
-        with:
-          name: config
-          path: configs
+      - name: Create config.json
+        run: |
+          echo "{ \"aws_region\": \"$AWS_REGION\", \"riot_key\": \"$RIOT_KEY\", \"discord_public_key\": \"$DISCORD_PUBLIC_KEY\", \"application_id\": \"$APPLICATION_ID\", \"token\": \"$TOKEN\" }" > configs/config.json
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v4
         with:
